Refactor to unmodifiable list and using streams for map.